# my-amx

./: CMakeLists.txt  Makefile  ironmake.sh
acl/: my-amx.json
include_priv/: cpu.h  life.h  main.h  my-amx-actions.h  my-amx-events.h  my-amx-methods.h  my-amx-rpc.h  my-amx.h
mod-custom/: CMakeLists.txt
mod-custom/include_priv/: mod-custom.h
mod-custom/src/: mod-custom.c
odl/: CMakeLists.txt  cpu.odl  my-amx.odl  my-amx_definition.odl  not-my-amx.odl
src/: CMakeLists.txt  cpu.c  htable.c  life-events.c  main.c  my-amx-actions.c  my-amx-events.c  my-amx-events.h  my-amx-methods.c  my-amx-methods.h  my-amx-rpc.c  my-amx.c  my-amx.h
src/odl/: my-amx-definition.odl  my-amx.odl
